objects/ssot__AdverseEventParty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Party Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyObject__c</fullName>
        <label>Party Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Role__c</fullName>
        <label>Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667905648_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventParty_AdverseEventId_map_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventParty_AdverseEventId_map_rel</relationshipLabel>
        <relationshipName>rel_1716667905648_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721820950_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventParty_PartyId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AdverseEventParty_PartyId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1716721820950_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726415635_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventParty_PartyId_map_Patien_rel</label>
        <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
        <relationshipLabel>AdverseEventParty_PartyId_map_Patien_rel</relationshipLabel>
        <relationshipName>rel_1716726415635_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>